--- a/en/偄/偄.11090.wikitext
+++ b/en/偄/偄.11090.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人一月大 (OMBK)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': weak
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人一月大 (OMBK)}}
+# weak
+====References====
+{{Han ref|kx=0109.230|dkj=00831|dj=0233.120|hdz=10188.070|uh=5044|ud=20548}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[だん]] (dan), [[なん]] (nan)
-|kun readings=[[よわい]] (yowai)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[だん]] (dan), [[なん]] (nan)|kun=[[よわい]] (yowai)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 난, 연
 
@@ -48,19 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': nan, yeon
 ** '''[[McCune-Reischauer]]''': nan, yŏn
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.230
-* Morohashi: 00831
-* Dae Jaweon: 0233.120
-* Hanyu Da Zidian: 10188.070
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5044
-** Decimal: 20548
 
 [[fr:偄]]
