--- a/en/偅/偅.11092.wikitext
+++ b/en/偅/偅.11092.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2221<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹十土 (OHJG)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2221<sub>4</sub>|canj=人竹十土 (OHJG)}}
+====References====
+{{Han ref|kx=0109.240|dkj=00832|dj=0233.130|hdz=10192.030|uh=5045|ud=20549|bh=D45C|bd=54364}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': jung2
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[しょう]] (shō), [[しゅ]] (shu), [[とう]] (tō)
-|kun readings=[[こども]] (kodomo)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[しょう]] (shō), [[しゅ]] (shu), [[とう]] (tō)|kun=[[こども]] (kodomo)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 동
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': dong
 ** '''[[McCune-Reischauer]]''': tong
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.240
-* Morohashi: 00832
-* Dae Jaweon: 0233.130
-* Hanyu Da Zidian: 10192.030
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5045
-** Decimal: 20549
-* '''Big5''':
-** Hex: D45C
-** Decimal: 54364
 
 [[fr:偅]]
