--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -1,25 +1,17 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2622<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人日心女 (OAPV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#brave
-*# martial
-*# hasty
-*# scudding
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人日心女 (OAPV)}}
+# brave
+# martial
+# hasty
+# scudding
+====References====
+{{Han ref|kx=0110.040|dkj=00836|dj=0234.010|hdz=10191.010|uh=5048|ud=20552|bh=D455|bd=54357}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -31,21 +23,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gai2, gai6 git6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[けつ]] (ketsu), [[けい]] (kei), [[げ]] (ge)
-|kun readings=[[いこう]] (ikou)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[けつ]] (ketsu), [[けい]] (kei), [[げ]] (ge)|kun=[[いこう]] (ikou)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 게, 걸
 
@@ -53,22 +42,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ge, geol
 ** '''[[McCune-Reischauer]]''': ke, kŏl
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.040
-* Morohashi: 00836
-* Dae Jaweon: 0234.010
-* Hanyu Da Zidian: 10191.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5048
-** Decimal: 20552
-* '''Big5''':
-** Hex: D455
-** Decimal: 54357
 
 [[fr:偈]]
