--- a/en/偊/偊.11098.wikitext
+++ b/en/偊/偊.11098.wikitext
@@ -1,23 +1,15 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2222<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹中月 (OHLB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#to walk alone
-*# self-reliant
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人竹中月 (OHLB)}}
+# to walk alone
+# self-reliant
+====References====
+{{Han ref|kx=0110.060|dkj=00838|dj=0235.010|hdz=10192.090|uh=504A|ud=20554|bh=D459|bd=54361}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -29,21 +21,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yu5
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[う]] (u), [[く]] (ku)
-|kun readings=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[う]] (u), [[く]] (ku)|kun=[[くぐまるさま]] (kugumarusama), [[つつしむさま]] (tsutsushimusama)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 유
 
@@ -51,22 +40,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': yu
 ** '''[[McCune-Reischauer]]''': yu
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.060
-* Morohashi: 00838
-* Dae Jaweon: 0235.010
-* Hanyu Da Zidian: 10192.090
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 504A
-** Decimal: 20554
-* '''Big5''':
-** Hex: D459
-** Decimal: 54361
 
 [[fr:偊]]
