--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2724<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人尸廿廿 (OSTT)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2724<sub>1</sub>|canj=人尸廿廿 (OSTT)}}
+====References====
+{{Han ref|kx=0110.070|dkj=00839|dj=0235.020|hdz=10198.020|uh=504B|ud=20555|bh=D452|bd=54354}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[へい]] (hei)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[へい]] (hei)|kun=}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0110.070
-* Morohashi: 00839
-* Dae Jaweon: 0235.020
-* Hanyu Da Zidian: 10198.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 504B
-** Decimal: 20555
-* '''Big5''':
-** Hex: D452
-** Decimal: 54354
 
 [[fr:偋]]
