--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2623<sub>2</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人田一女 (OWMV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': cling to, cuddle, embrace, fondle
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2623<sub>2</sub>|canj=人田一女 (OWMV)}}
+# cling to, cuddle, embrace, fondle
+====References====
+{{Han ref|kx=0110.110|dkj=00843|dj=0235.050|hdz=10191.020|uh=504E|ud=20558|bh=B0B9|bd=45241}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': wui1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[わい]] (wai), [[え]] (e)
-|kun readings=[[ほのか]] (honoka), [[なじむ]] (najimu), [[したしむ]] (shitashimu), [[ちかよる]] (chikayoru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[わい]] (wai), [[え]] (e)|kun=[[ほのか]] (honoka), [[なじむ]] (najimu), [[したしむ]] (shitashimu), [[ちかよる]] (chikayoru)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 아
 
@@ -48,23 +39,6 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': 
 ** '''[[McCune-Reischauer]]''': 
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.110
-* Morohashi: 00843
-* Dae Jaweon: 0235.050
-* Hanyu Da Zidian: 10191.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 504E
-** Decimal: 20558
-* '''Big5''':
-** Hex: B0B9
-** Decimal: 45241
 
 [[fr:偎]]
 [[ko:偎]]
