--- a/en/偐/偐.11104.wikitext
+++ b/en/偐/偐.11104.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人卜竹竹 (OYHH)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': false, counterfeit, spurious
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人卜竹竹 (OYHH)}}
+# false, counterfeit, spurious
+====References====
+{{Han ref|kx=0110.180|dkj=00850|dj=0236.020|hdz=10194.100|uh=5050|ud=20560}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[がん]] (gan), [[げん]] (gen)
-|kun readings=[[いつわる]] (itsuwaru), [[にせ]] (nise)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[がん]] (gan), [[げん]] (gen)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 안
 
@@ -48,19 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': an
 ** '''[[McCune-Reischauer]]''': an
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.180
-* Morohashi: 00850
-* Dae Jaweon: 0236.020
-* Hanyu Da Zidian: 10194.100
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5050
-** Decimal: 20560
 
 [[fr:偐]]
