--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,57 +14,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 #possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
 #{{cattag|of the weather}} pleasant; clear.
 
-====Translations====
-'''very attractive'''
-{{top}}
-*Afrikaans: [[mooi]]
-*Albanian:  i bukur {{m}}, e bukur {{f}}
-*Anglo-Saxon: [[wlitig]]
-*Arabic: {{ARchar|[[جميل]]}} (jamil)
-*Breton: [[brav]], [[kaer]]
-*Bulgarian: [[красив]], [[прекрасен]]
-*Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
-*Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
-*Dutch: [[mooi]]
-*Esperanto: [[bela]]
-*Estonian: [[kaunis]] [[ilus]]
-*Fijian: [[totoka]]
-*Filipino: [[maganda]]
-*Finnish: [[kaunis]]
-*French: [[beau]] {{m}}, [[belle]] {{f}}
-*Faeroese: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
-*Frisian: [[moai]], [[kreas]]
-*German: [[schön]]
-*Greek: [[ωραίος]] (oréyos)
-*Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
-{{mid}}
-*Icelandic: [[fallegur]], [[fagur]]
-*Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-*Italian: [[bello]]
-*Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*Latin: [[pulcher]], [[formosus]] {{m}}, [[bellus]] {{m}}
-*Old Norse: [[fagr]]
-*Persian: {{FAchar|[[زیبا]]}} (ziba)
-*Polish: [[piękny]]
-*Portuguese: [[belo]] {{m}}, [[bela]] {{f}}, [[bonito]] {{m}}, [[bonita]] {{f}}
-*Russian: [[красивый]],[[прекрасный]]
-*Scots Gaelic: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
-*Spanish: [[hermoso]] {{m}}, [[hermosa]] {{f}}, ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
-*Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
-*Swedish: [[vacker]]
-*[[Tamil]]: [[அழகிய]] [azhagiya]
-*[[Telugu]]: [[అందమైన]]
-*Turkish: [[güzel]]
-*Urdu: {{URchar|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
-*Vietnamese: [[đẹp]], [[đẹp đẽ]]
-{{bottom}}
-
-'''pleasant, clear weather'''
-{{top}}
-{{mid}}
-*[[Tamil]]: [[அழகிய]] [azhagiya]
-*[[Telugu]]: [[ఆహ్లాదకరమైన]]
-{{bottom}}
+Sterling and Taylor
 
 ====Synonyms====
 *[[attractive]]
