--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
-# The country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], now stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]] and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
+# The country in [[North America]], now sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
 
 ====Synonyms====
 *{{italbrac-colon|country in North America}} [[United States]], [[U.S.]], [[USA]], [[U.S.A.]], [[U.S. of A.]]
