--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Noun===
+===Proper noun===
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
 # The country in [[North America]], now sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
