--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -36,7 +36,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Faeroese: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
-*Greek: [[ωραίος]] {{m}} (oréyos), [[όμορφος]] (ómorphos)
+*Greek: [[ωραίος]] {{m}} (oréyos), [[όμορφος]] {{m}} (ómorphos)
 *Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
 {{mid}}
 *Icelandic: [[fallegur]], [[fagur]]
