--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -28,11 +28,15 @@
 # past participle of to [[find]]
 
 ==== Translations ====
-*[[Dutch]]: [[gevonden]]
-*[[German]]: [[gefunden]] 
-*[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]], [[temu|ditemukan]], [[temu|ditemui]]
-*[[Japanese]]: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita), [[見つけられた]] (みつけられた, mitsukerareta), [[発見]]した ([[はっけん]]された, hakken-sareta)
+{{top}}
+*Dutch: [[gevonden]]
+*German: [[gefunden]] 
+*French: [[trouvé]]
+*Indonesian: [[temu]], [[temu|menemukan]], [[temu|menemui]], [[temu|ditemukan]], [[temu|ditemui]]
+{{mid}}
+*Japanese: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita), [[見つけられた]] (みつけられた, mitsukerareta), [[発見]]した ([[はっけん]]された, hakken-sareta)
 *Swedish: [[hittat]], [[funnit]]
+{{bottom}}
 
 ===Verb===
 '''to found'''  ([[founds]], [[founded]], [[founding]])
