--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -32,8 +32,9 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Finnish: [[leikki]], [[peli]]
 *French: [[jeu]] {{m}}
 *German: [[Spiel]] {{n}}
-*Hungarian: [[játék]]
+*Hebrew: [[משחק]] (misḥāq) {{m}}, [[שעשוע]] (shāʿāshuʿā) {{m}}
 {{mid}}
+*Hungarian: [[játék]]
 *Italian: [[gioco]] {{m}}
 *[[Kurdish]]: [[yarî]] {{f}}, [[lîstik]] {{f}}
 *Latin: [[ludus]] {{m}}
@@ -55,6 +56,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *French: [[pièce]] {{f}}
 *German: [[Schauspiel]] {{n}}
 {{mid}}
+*Hebrew: [[משחק]] (misḥāq) {{m}}
 *Italian: [[dramma]] {{m}}
 *[[Kurdish]]: [[şano]] {{f}}, [[piyes]] {{f}}, [[tiyatro]] {{f}}
 *Portuguese: [[peça]] [[teatral]] {{f}}
@@ -67,8 +69,9 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{top}}
 *Dutch: [[spelbeweging]] {{f}}
 *Finnish: [[peli]]
-*[[Kurdish]]: [[yarî]] {{f}}, [[lîstik]] {{f}}
+*Hebrew: [[משחק]] (misḥāq) {{m}}
 {{mid}}
+*[[Kurdish]]: [[yarî]] {{f}}, [[lîstik]] {{f}}
 *Slovene: [[igra]] {{f}}
 *Swedish: [[spel]] {{c}}
 {{bottom}}
@@ -128,9 +131,10 @@ Old English ''[[pleġian]]''
 *Finnish: [[leikkiä]], [[pelata]]
 *French: [[jouer]]
 *German: [[spielen]]
-{{mid}}
+*Hebrew: [[לשחק]] (l'sāḥeq), [[להשתעשע]] (l'hishtāʿāsheʿā)
 *Hungarian: [[játszik]]
 *Italian: [[giocare]]
+{{mid}}
 *Japanese: [[遊ぶ]] (asobu)
 *Old English: [[lacan|lācan]]
 *Polish: [[bawić]] (się)
@@ -142,6 +146,7 @@ Old English ''[[pleġian]]''
 *Swedish: [[leka]]
 *Telugu: [[ఆడు]] (aaDu)
 {{bottom}}
+
 '''produce music using a musical instrument ([[transitive]] sense)'''
 {{top}}
 *Catalan: tocar
@@ -153,6 +158,7 @@ Old English ''[[pleġian]]''
 *Dutch: [[spelen]]
 *Finnish: [[soittaa]]
 *French: [[jouer]] de
+*Hebrew: [[לנגן]] ב- (l'nāgen b'-)
 {{mid}}
 *Italian: [[suonare]]
 *Old English: [[lacan|lācan]]
@@ -172,8 +178,9 @@ Old English ''[[pleġian]]''
 *French: [[jouer]]
 *German: [[spielen]]
 *Japanese: [[演奏]]する (ensō suru)
-*Old English: [[lacan|lācan]]
+*Hebrew: [[לנגן]] (l'nāgen)
 {{mid}}
+*Old English: [[lacan|lācan]]
 *Polish: [[grać]]
 *Portuguese: [[tocar]]
 *Russian: [[играть]]
@@ -195,6 +202,7 @@ Old English ''[[pleġian]]''
 *Dutch: [[optreden]]
 *Finnish: [[näytellä]]
 *German: [[spielen]]
+*Hebrew: [[לשחק]] (l'sāḥeq)
 {{mid}}
 <!--Put translations for languages from A to Z here-->
 *Polish: [[grać]], [[występować]]
@@ -226,6 +234,7 @@ Old English ''[[pleġian]]''
 *Dutch: [[spelen]], [[afspelen]]
 *Finnish: [[toistaa]]
 *French: [[jouer]]
+*Hebrew: [[להשמיע]] (l'hāshmiʿā)
 {{mid}}
 *Polish: [[grać]], [[odtwarzać]]
 *Portuguese: [[gravar]]
