--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -1,5 +1,4 @@
 {{wikipedia}}
-
 ==English==
 
 ===Etymology===
@@ -9,12 +8,12 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 {{en-noun}}
 [[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
-# [[image]], [[picture]], representation
-# a religious painting, often done on wooden panels 
-# a person or thing that is the best example of a certain profession or some doing.
-#:''That man is an icon in the business; he personifies loyalty and good business sense".
-# a small picture which represents something (such as an icon on a computer screen which when clicked performs some function)
-#{{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also [[symbol]] and [[index]].
+# An [[image]], [[picture]], or other representation.
+# A religious painting, often done on wooden panels.
+# A person or thing that is the best example of a certain profession or some doing.
+#:''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
+# A small picture which represents something (such as an icon on a computer screen which when clicked performs some function.)
+# {{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.  See also [[symbol]] and [[index]].
 
 ====Related terms====
 *[[iconic]]
@@ -29,7 +28,7 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]], [[symboli]]
-*Greek: [[απεικόνισμα]] [apiˈko̞niˌzma] ''n'', [[εικόνα]] [iˈko̞na] ''f'', [[απεικόνιση]] [apiˈko̞niˌsi] ''f'', [[παράσταση]] [paˈrastaˌsi] ''f'', [[αναπαράσταση]] [anapaˈrastaˌsi] ''f'', [[ομοίωμα]] [o̞ˈmio̞ˌma] ''n'', [[είδωλο]] [ˈiðo̞ˌlo̞] ''n'', [[απείκασμα]] [aˈpikaˌzma] ''n''
+*Greek: [[απεικόνισμα]] [apiˈko̞niˌzma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}, [[απεικόνιση]] [apiˈko̞niˌsi] {{f}}, [[παράσταση]] [paˈrastaˌsi] {{f}}, [[αναπαράσταση]] [anapaˈrastaˌsi] {{f}}, [[ομοίωμα]] [o̞ˈmio̞ˌma] {{n}}, [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[απείκασμα]] [aˈpikaˌzma] {{n}}
 {{mid}}
 *Italian: [[icona]] {{f}}
 *Polish: [[ikona]] {{f}}
@@ -44,11 +43,11 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]]
-*Greek: [[εικόνα]] [iˈko̞na] ''f'', [[εικόνισμα]] [iˈko̞niˌzma] ''n''
-*Italian: [[icona]] ''f''
+*Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
+*Italian: [[icona]] {{f}}
 {{mid}}
-*Latin: icon ''f''
-*Polish: [[ikona]] ''f''
+*Latin: icon {{f}}
+*Polish: [[ikona]] {{f}}
 *Serbian
 :Cyrillic: [[икона#Serbian|икона]] {{f}}
 :Latin: [[ikona#Serbian|ikona]] {{f}}
@@ -60,7 +59,7 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]], [[idool]] {{n}}
 *Finnish: [[symboli]], [[ikoni]]
-*Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] ''n'', [[ίνδαλμα]] [ˈinðalˌma] ''n'', [[εικόνα]] [iˈko̞na] ''f''
+*Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
 {{mid}}
 *Italian: [[icona]] {{f}}
 *Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
@@ -75,7 +74,7 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]], [[pictogram]] {{n}}
 *Finnish: [[kuvake]]
-*Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] ''n''
+*Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
 {{mid}}
 *Italian: [[icona]] {{f}}
 *Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
@@ -85,8 +84,7 @@ From {{L.}} ''[[icon#Latin|icon]]'', derived from {{Gr.}} [[εἰκών]] (''eik
 *Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{bottom}}
 
-=====ttbc=====
-These translations need to be checked by someone:
+=====Translations to be checked=====
 {{checktrans}}
 *{{ttbc|Interlingua}}: [[icono]]
 
@@ -94,9 +92,9 @@ These translations need to be checked by someone:
 
 ==Latin==
 
-[[Category:Latin words from Greek]]
 ===Etymology===
 From {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representation"
+
 ===Noun===
 '''icon''' (''genitive'' '''[[iconis]]'''); {{f}}, ''[[Wiktionary Appendix:Latin third declension|third declension]]''
 
@@ -106,6 +104,8 @@ From {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representatio
 ===See also===
 *[[iconicus]]
 *[[iconismus]]
+
+[[Category:Latin words from Greek]]
 
 [[io:icon]]
 [[la:icon]]
