--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -13,27 +13,27 @@
 
 ====Translations====
 {{top}}
-*Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayá:t al-mutáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayá:t al-mutáħeda) {{f}} {{p}}
+*Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{fpl}}
 *Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
 *Azeri: [[Amerika Birləşmiş Ştatları]]
 *Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
-*Bosnian: [[Sjedinjene Američke Države]] {{f}} {{p}}, [[Amerika]] {{f}}, [[SAD]]
-*[[Breton]]: [[Stadoù-Unanet Amerika]] {{f}} {{p}}, [[SUA]]
+*Bosnian: [[Sjedinjene Američke Države]] {{fpl}}, [[Amerika]] {{f}}, [[SAD]]
+*[[Breton]]: [[Stadoù-Unanet Amerika]] {{fpl}}, [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
 *[[Catalan]]: [[Estats Units d'Amèrica]] {{m}} {{p}}
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
-*Croatian: [[Sjedinjene Američke Države]] {{f}} {{p}}
+*Croatian: [[Sjedinjene Američke Države]] {{fpl}}
 *Czech [[Spojené státy americké]], [[Spojené státy]]
 *Danish: [[Amerikas Forenede Stater]], [[Forenede Stater]]
-*Dutch: [[Verenigde Staten van Amerika]] {{f}} {{p}}, [[Verenigde Staten]], [[VS]]
+*Dutch: [[Verenigde Staten van Amerika]] {{fpl}}, [[Verenigde Staten]], [[VS]]
 *[[Esperanto]]: [[Usono]], [[Unuiĝintaj Ŝtatoj de Ameriko]]
 *Estonian: [[Ameerika Ühendriigid]]
 *Finnish: [[Amerikan Yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
-*French: [[États-Unis d'Amérique]] {{m}} {{p}}, (''short form'') [[États-Unis]] {{m}} {{p}}, [[É-U]]
+*French: [[États-Unis d'Amérique]] {{mpl}}, (''short form'') [[États-Unis]] {{mpl}}, [[É-U]]
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
-*German: [[Vereinigte Staaten von Amerika]] {{m}} {{p}}, (''short form'') [[Vereinigte Staaten]] {{m}} {{p}}, [[USA]] {{m}} {{p}} or {{f}} ''singular''
-*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] {{f}} {{p}}, [[Ηνωμένες Πολιτείες Αμερικής]] {{f}} {{p}}, (''short form'') [[Ηνωμένες Πολιτείες]] {{f}} {{p}}, [[ΗΠΑ]]
+*German: [[Vereinigte Staaten von Amerika]] {{mpl}}, (''short form'') [[Vereinigte Staaten]] {{mpl}}, [[USA]] {{mpl}} or {{f}} ''singular''
+*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] {{fpl}}, [[Ηνωμένες Πολιτείες Αμερικής]] {{fpl}}, (''short form'') [[Ηνωμένες Πολιτείες]] {{fpl}}, [[ΗΠΑ]]
 *Gujarati: [[સંયુકત રાજ્ય અમેરિકા]]
 *Hawaiian: [['Amelika Huipū'ia]]
 *Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
@@ -42,7 +42,7 @@
 *Indonesia: [[Amerika Serikat]]
 *[[Interlingua]]: [[Statos Unite de America]]
 *[[Irish]]: [[Stáit Aontaithe Mheiriceá]], [[Meiriceá]]
-*Italian: [[Stati Uniti d'America]] {{m}} {{p}}, (''short form'') [[Stati Uniti]] {{m}} {{p}}, [[SUA]]
+*Italian: [[Stati Uniti d'America]] {{mpl}}, (''short form'') [[Stati Uniti]] {{mpl}}, [[SUA]]
 {{mid}}
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 *Kazakh: [[Америка Құрама Штаттары]]
@@ -56,22 +56,22 @@
 *Norwegian: [[Amerikas forente stater]], [[De forente stater]]
 *Persian: {{FAchar|[[ایالات متحده امریکا|ایالات متحده آمریکا]]}} (ayâlât-e motahideh âmrika)
 *Polish: [[Stany Zjednoczone Ameryki]] {{m}} {{p}}, [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''abbr:'' [[SZA]], ''colloquial:'' [[Stany]], [[USA]]
-*Portuguese: [[Estados Unidos da América]] {{m}} {{p}}, ''short:'' [[Estados Unidos]] {{m}} {{p}}, [[EUA]]
+*Portuguese: [[Estados Unidos da América]] {{mpl}}, ''short:'' [[Estados Unidos]] {{mpl}}, [[EUA]]
 *Punjabi: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 *Romanian: [[Statele Unite ale Americii]], ''short:'' [[Statele Unite]], [[SUA]]
-*Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) {{m}} {{p}}, [[США]]
-*Scottish Gaelic: [[na Stàitean Aonaichte na h-Amaireaga]] {{f}} {{p}}
+*Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) {{mpl}}, [[США]]
+*Scottish Gaelic: [[na Stàitean Aonaichte na h-Amaireaga]] {{fpl}}
 *Serbian:
-*:Cyrillic: [[Сједињене Америчке Државе]] {{f}} {{p}}, [[САД]]
-*:Roman: [[Sjedinjene Američke Države]] {{f}} {{p}}, [[SAD]]
-*Sicilian: [[Stati Uniti dâ Mèrica]] {{m}} {{p}}
-*Slovak: [[Spojené Štáty Americké]] {{m}} {{p}}, [[USA]]
-*Slovene: [[Združene države Amerike]] {{f}} {{p}}, [[Združene države]] {{f}} {{p}} (short form), [[ZDA]]
-*Spanish: [[Estados Unidos de América]] ''m sg'', (''short form'') Estados Unidos ''m sg'', ''abbr:'' [[EE. UU.]] ''m sg'', [[EEUU]]
+*:Cyrillic: [[Сједињене Америчке Државе]] {{fpl}}, [[САД]]
+*:Roman: [[Sjedinjene Američke Države]] {{fpl}}, [[SAD]]
+*Sicilian: [[Stati Uniti dâ Mèrica]] {{mpl}}
+*Slovak: [[Spojené Štáty Americké]] {{mpl}}, [[USA]]
+*Slovene: [[Združene države Amerike]] {{fpl}}, [[Združene države]] {{fpl}} (short form), [[ZDA]]
+*Spanish: [[Estados Unidos de América]] {{m}} {{s}}, (''short form'') Estados Unidos {{m}} {{s}}, ''abbr:'' [[EE. UU.]] {{m}} {{s}}, [[EEUU]]
 *Swedish: [[Amerikas förenade stater]], [[Förenta staterna]]
 *Tajik: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 *Turkish: [[Amerika Birleşik Devletleri]], [[ABD]]
-*Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{m}} {{p}}, [[США#Ukrainian|США]]
+*Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{mpl}}, [[США#Ukrainian|США]]
 *Uyghur: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}} (’amerika quşma ştatleri)
 *Uzbek: [[Amerika Qo'shma Shtatlari]]
 *Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
