--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -2,10 +2,13 @@
 ===Han character===
 {{Han char|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)}}
 # [[docile]]<!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif --> 
+# [[dwarf]], [[short]]
 # [[Japan]]
 # [[Japanese]]
+
 ====References====
 {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
+
 ----
 
 ==Cantonese==
