--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -50,7 +50,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Portuguese: [[belo]] {{m}}, [[bela]] {{f}}, [[bonito]] {{m}}, [[bonita]] {{f}}
 *Russian: [[красивый]],[[прекрасный]]
 *Scots Gaelic: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
-*Spanish: [[hermoso]] {{m}}, [[hermosa]] {{f}}, ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
+*Spanish: [[hermoso]], [[bello]], [[lindo]]
 *Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
 *Swedish: [[vacker]]
 *[[Tajik]]: {{FAchar|[[نیلوفار]]}} (nilufar)
