--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -8,7 +8,7 @@
 *:Rhymes: [[Rhymes:English:-iːk|-iːk]]
 
 ===Etymology===
-Old English ''[[sprēcan]]'' (later: ''spēcan'')
+Old English ''[[specan|spēcan]]'', from earlier ''[[sprēcan]]''
 
 ===Verb===
 {{en-verb|speaks|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
