--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -34,7 +34,7 @@ Old English ''[[feohtan]]'', from West Germanic ''*fextanan''. Cognate with Dutc
 *Dutch: [[vechten]]
 *Finnish: [[tapella]], [[taistella]]
 *French: [[combattre]]
-*German: [[kämpfen]]
+*German: [[kämpfen]], [[fechten]], [[streiten]] (archaic)
 *Italian: [[azzuffarsi]], [[battersi]]
 {{mid}}
 *Latin: [[pugnare]]
