--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -3,7 +3,7 @@
 {{Han char|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)}}
 # [[docile]]<ref>Kangxi Dictionary Net version http://www.kangxizidian.com/</ref> 
 <!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif --> 
-# [[dwarf]], [[short]]
+# <u>[[dwarf]], [[short]]</u><sup>&#123;verification needed&#125;</sup>
 # [[Japan]]
 # [[Japanese]]
 
