--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -51,7 +51,9 @@
 *Swedish: [[åska]] {{c}} (1), [[åskmuller]] {{n}} (2), [[muller]] {{n}} (2), [[mullrande]] {{n}} (3), [[åskdån]] {{n}} (2), [[dån]] {{n}} (2,3), (åsk)[[smäll]] {{c}} (1)
 *Telugu: [[ఉరుము]] (urumu)
 *Thai: [[สายฟ้า]] (Sāi-Fā)
+*Thomani: [[aguthar]]
 *[[Tupinambá]]: [[tupã sununga]]
+*Welsh: [[taran]] [[tyrfau]]
 {{bottom}}
 
 ===Verb===
