--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -53,7 +53,7 @@
 *Thai: [[สายฟ้า]] (Sāi-Fā)
 *Thomani: [[aguthar]]
 *[[Tupinambá]]: [[tupã sununga]]
-*Welsh: [[taran]], [[tyrfau]]
+*Welsh: [[taranau]], [[taran = 'peal of thunder']], [[tyrfau]]
 {{bottom}}
 
 ===Verb===
