--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -100,6 +100,7 @@
 '''colour'''
 {{top}}
 *Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
+*Italian: [[zafferano]] {{m}}
 *Japanese: [[サフラン色]]の (safuranirono)
 *Polish: [[szafranowy]]
 {{mid}}
