--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -3,37 +3,7 @@
 ===Pronunciation===
 * {{AHD|/krēp/}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
 
-===Noun===
-{{en-noun}}
-
-# The movement of something that creeps.
-# A gradual change in anything.
-## (''publishing'') In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
-## (''materials science'') An increase in [[strain]] with time.
-##{{geology}} the [[imperceptible]] [[downslope]] movement of surface [[rock]]
-# (''informal'') An annoyingly [[unpleasant]] person.
-#: ''Stop following me, you creep!''
-
-====Translations====
-'''movement of something that creeps'''
-{{top}}
-*Dutch: [[kruip]] {{m}}
-{{mid}}
-*Italian: [[strisciare]] {{m}}
-{{bottom}}
-
-<!--'''gradual change in anything'''
-{{top}}
-{{mid}}
-{{bottom}}
--->
-'''informal: an annoyingly unpleasant person'''
-{{top}}
-*Dutch: [[griezel]] {{m}}, [[engerd]] {{m}}
-*German: [[Knilch]] {{m}}
-{{mid}}
-*Italian: [[antipatico]] {{m}}
-{{bottom}}
+alan ker AKA boss
 
 ===Verb===
 {{en-verb|creeps|creeping|crept}}
