--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -38,6 +38,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *Italian: [[porto]] {{m}}
 *Japanese: [[港]]　([[みなと]], ''minato'')
 *Korean: [[항구]] ([[港口]], hanggu)
+*Malayalam: [[തുറമുഖം]] (thuRamukham)
 *Polish: port {{m}}
 *Portuguese: [[porto]] {{m}}
 *Spanish: [[puerto]] {{m}}
