--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -69,6 +69,8 @@ Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin w
 *Eksetra
 *Eksetera
 
+[[Category:Latin phrases]]
+
 [[da:et cetera]]
 [[fr:et cetera]]
 [[la:et cetera]]
