--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 ===Etymology===
-From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
+From [[Serbo-Croatian]] [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
 
 ===Alternative spellings===
 * [[Jugoslavia]] (''common pre-WWII spelling'')
